fixing image alignment

--- a/src/main/content/_assets/css/home.css
+++ b/src/main/content/_assets/css/home.css
@@ -146,9 +146,7 @@
     width: 75%;
 }
 
-.boxes_image {
-    margin-top: 100px;
-}
+
 
 #intro_content {
     position: relative;
